--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ TestResults
 *.sln.docstates
 
 # Build results
-[Dd]ebug/
-[Rr]elease/
+#[Dd]ebug/
+#[Rr]elease/
 x64/
 *_i.c
 *_p.c
@@ -79,7 +79,7 @@ publish
 *.Publish.xml
 
 # NuGet Packages Directory
-packages
+#packages
 
 # Windows Azure Build Output
 csx
