--- a/KaleyLab.Data.EntityFrameworkSampleTest/App.config
+++ b/KaleyLab.Data.EntityFrameworkSampleTest/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SampleEFDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=KaleyLab_SampleEFDB;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\KaleyLab_SampleEFDB.mdf" />
+    <add name="EntityFrameworkSample" connectionString="Data Source=.;Initial Catalog=EntityFrameworkSample;Persist Security Info=True;User ID=sa;Password=sa;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
