--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,5 +2,9 @@
 <repositories>
   <repository path="..\..\DataAccess\KaleyLab.EntityFramework\packages.config" />
   <repository path="..\KaleyLab.Data.EntityFramework\packages.config" />
+  <repository path="..\KaleyLab.Data.EntityFrameworkSample\packages.config" />
+  <repository path="..\KaleyLab.Data.EntityFrameworkSampleTest\packages.config" />
+  <repository path="..\KaleyLab.Data.Sample\packages.config" />
+  <repository path="..\KaleyLab.Data.SampleConsole\packages.config" />
   <repository path="..\KaleyLab.EntityFramework\packages.config" />
 </repositories>
