Add SqlQuery interface.
DataAccess:
Add SqlQuery interface.
Add MS SQLHelper class.
Restructure the solution folders.

--- a/KaleyLab.Data/KaleyLab.Data.csproj
+++ b/KaleyLab.Data/KaleyLab.Data.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Specifications\NotSpecification.cs" />
     <Compile Include="Specifications\OrSpecification.cs" />
     <Compile Include="Specifications\Specification.cs" />
+    <Compile Include="SQLHelper.cs" />
     <Compile Include="UnitOfWorkService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
