--- a/KaleyLab.NET/KaleyLab.NET.csproj
+++ b/KaleyLab.NET/KaleyLab.NET.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{111FE75E-8F5A-4A6A-9B40-03BDCAF74011}</ProjectGuid>
+    <ProjectGuid>{5700C385-2E82-4394-B036-21232D8FF863}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KaleyLab.Data</RootNamespace>
-    <AssemblyName>KaleyLab.Data</AssemblyName>
+    <RootNamespace>KaleyLab.NET</RootNamespace>
+    <AssemblyName>KaleyLab.NET</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,32 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DisposableObj.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="IRepositoryContext.cs" />
-    <Compile Include="IUnitOfWork.cs" />
-    <Compile Include="LinqKit\ExpandableQuery.cs" />
-    <Compile Include="LinqKit\ExpressionExpander.cs" />
-    <Compile Include="LinqKit\ExpressionVisitor.cs" />
-    <Compile Include="LinqKit\Extensions.cs" />
-    <Compile Include="Order.cs" />
-    <Compile Include="OrderExtensions.cs" />
-    <Compile Include="PagedResult.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryableExtensions.cs" />
-    <Compile Include="Repository.cs" />
-    <Compile Include="RepositoryContext.cs" />
-    <Compile Include="RepositoryContextBuilder.cs" />
-    <Compile Include="Specifications\AdHocSpecification.cs" />
-    <Compile Include="Specifications\AndSpecification.cs" />
-    <Compile Include="Specifications\AnySpecification.cs" />
-    <Compile Include="Specifications\ExpressionExtensions.cs" />
-    <Compile Include="Specifications\ISpecification.cs" />
-    <Compile Include="Specifications\NotSpecification.cs" />
-    <Compile Include="Specifications\OrSpecification.cs" />
-    <Compile Include="Specifications\Specification.cs" />
-    <Compile Include="SQLHelper.cs" />
-    <Compile Include="UnitOfWorkService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
